# AndroidDemo

./: .gitignore  Cargo.toml  gradle.properties
app/: build.gradle.kts
app/src/androidTest/java/androidx/appcompat/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/demo/: CMakeLists.txt  jni.cpp
app/src/main/cpp/demo/systemfonts/: CMakeLists.txt  systemfonts.h
app/src/main/cpp/systemfonts/: CMakeLists.txt  systemfonts.cpp
app/src/main/java/androidx/appcompat/demo/: MainActivity.kt
app/src/main/java/androidx/appcompat/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/xml/: file_paths.xml
app/src/main/rust/: CMakeLists.txt  cargo_config.toml.in
app/src/test/java/androidx/appcompat/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: font_copy.rs  font_parser.rs  jni_interface.rs  lib.rs  scanner.rs
