[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "demo"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
ttf-parser = "0.21"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
panic = "abort"
lto = true
strip = true
